Temporarily adding sandbox

--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -1941,7 +1941,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -1987,7 +1987,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2053,7 +2053,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2119,7 +2119,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2185,7 +2185,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2251,7 +2251,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2297,7 +2297,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2363,7 +2363,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2409,7 +2409,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2455,7 +2455,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2501,7 +2501,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2547,7 +2547,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2593,7 +2593,7 @@ html {
 }
 
 /* line 30, ../scss/modules/grid/_components.scss */
-> * .cols-gutter:last-child, > * .columns-gutter:last-child {
+.cols-gutter > *:last-child, .columns-gutter > *:last-child {
   margin-right: 0;
 }
 
@@ -2874,7 +2874,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -2920,7 +2920,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -2986,7 +2986,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3052,7 +3052,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3118,7 +3118,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3184,7 +3184,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3230,7 +3230,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3296,7 +3296,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3342,7 +3342,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3388,7 +3388,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3434,7 +3434,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3480,7 +3480,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3526,7 +3526,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3790,7 +3790,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3836,7 +3836,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3902,7 +3902,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -3968,7 +3968,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4034,7 +4034,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4100,7 +4100,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4146,7 +4146,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4212,7 +4212,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4258,7 +4258,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4304,7 +4304,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4350,7 +4350,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4396,7 +4396,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4442,7 +4442,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4706,7 +4706,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4752,7 +4752,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4818,7 +4818,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4884,7 +4884,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -4950,7 +4950,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5016,7 +5016,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5062,7 +5062,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5128,7 +5128,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5174,7 +5174,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5220,7 +5220,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5266,7 +5266,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5312,7 +5312,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -5358,7 +5358,7 @@ html {
   }
 
   /* line 30, ../scss/modules/grid/_components.scss */
-  > * .cols-gutter:last-child, > * .columns-gutter:last-child {
+  .cols-gutter > *:last-child, .columns-gutter > *:last-child {
     margin-right: 0;
   }
 
@@ -10736,3 +10736,43 @@ body .failure.alert h1, body .failure.alert .h1, body .failure.alert h2, body .f
 /* 'modules/_animations'; */
 /* Import Extensions */
 /* Import Themes */
+/* line 127, ../scss/modules/grid/_mixins.scss */
+.gg-header > :nth-child(1) {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  *zoom: 1;
+  margin: 0;
+  display: block;
+  position: relative;
+  float: left;
+  clear: none;
+  height: 100%;
+  width: 4rem;
+}
+/* line 38, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.4/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.gg-header > :nth-child(1):after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 135, ../scss/modules/grid/_mixins.scss */
+.gg-header > :nth-child(2) {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  *zoom: 1;
+  margin: 0;
+  display: block;
+  position: relative;
+  float: left;
+  clear: none;
+  height: 100%;
+  width: calc(100% - (0px + 4rem));
+}
+/* line 38, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.4/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.gg-header > :nth-child(2):after {
+  content: "";
+  display: table;
+  clear: both;
+}
