--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -30,6 +30,7 @@
                     <hgroup>
                         <h4>Total</h4>
                         <h1>11.64 MB</h1>
+                        <i class="fa fa-camera-retro fa-lg"></i>
                     </hgroup>
                 </div>
             </div>
