Removed %content (now %pad), added valign and valign-all mixins, added .pad, .pad-vertical, .pad-horizontal, added .row-bottom, added $display options for _grid, _column, and _row, added %shape-circle and mixin shape-circle, added %background-(name)

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -1,40 +1,61 @@
 <h1>Sandbox</h1>
 
-<div class="columns-gutter-6">
-    <section>
-        <header class="gg-header theme-primary row content">
-            <div class="text-center">&lt;</div>
-            <div class="text-left"><strong>App Settings</strong></div>
-        </header>
-        <div class="row-3 content">
-            <div class="gg-header">
-                <div class="text-center">food</div>
-                <div class="text-left">
-                    <h3>Morning Pizza</h3>
-                    <div class="field">
-                        <button class="light inline">Force Stop</button>
-                        <button class="secondary inline">Uninstall</button>
-                    </div>
-                    <div class="field">
-                        <input type="checkbox"><span>Show Notifications</span>
-                    </div>
+<div class="gg-device border-light">
+    <header class="gg-header theme-primary">
+        <div class="text-center"><i class="fa fa-bars"></i></div>
+        <div class="pad-horizontal">
+            <span>All</span>
+        </div>
+        <div class="text-center"><i class="fa fa-search"></i></div>
+        <div class="text-center"><i class="fa fa-ellipsis-v"></i></div>
+    </header>
+    <div class="row">
+        <section class="layer">
+            <div class="gg-list">
+                <div class="text-center"><i class="fa fa-star"></i></div>
+                <div class="pad-horizontal"><span>Janet Perkins</span></div>
+                <div>
+                    <div><span class="bg-dark gg-avatar"></span></div>
                 </div>
             </div>
-        </div>
-        <hr>
-        <div class="row-3 content">        
-            <div class="gg-header">
-                <div class="text-center">list</div>
-                <div class="text-left">
-                    <h5>Storage</h5>
-                    <hgroup>
-                        <h4>Total</h4>
-                        <h1>11.64 MB</h1>
-                        <i class="fa fa-camera-retro fa-lg"></i>
-                    </hgroup>
+            <div class="gg-list">
+                <div class="text-center"><i class="fa fa-star"></i></div>
+                <div class="pad-horizontal"><span>Mary Johnson</span></div>
+                <div>
+                    <div><span class="bg-dark gg-avatar"></span></div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section></section>
+            <div class="gg-list">
+                <div class="text-center"><i class="fa fa-star"></i></div>
+                <div class="pad-horizontal"><span>Peter Carlsson</span></div>
+                <div>
+                    <div><span class="bg-dark gg-avatar"></span></div>
+                </div>
+            </div>
+        </section>
+        <section class="layer bg-darken">
+            <div class="row-bottom theme-white">
+                <div class="gg-list">
+                    <div class="text-center"><i class="fa"></i></div>
+                    <div class="pad-horizontal"><span>Share</span></div>
+                    <div></div>
+                </div>
+                <div class="gg-list">
+                    <div class="text-center"><i class="fa"></i></div>
+                    <div class="pad-horizontal"><span>Upload</span></div>
+                    <div></div>
+                </div>
+                <div class="gg-list">
+                    <div class="text-center"><i class="fa"></i></div>
+                    <div class="pad-horizontal"><span>Copy</span></div>
+                    <div></div>
+                </div>
+                <div class="gg-list">
+                    <div class="text-center"><i class="fa"></i></div>
+                    <div class="pad-horizontal"><span>Print This Page</span></div>
+                    <div></div>
+                </div>
+            </div>
+        </section>
+    </div>
 </div>
