--- a/scss/modules/themes/_components.scss
+++ b/scss/modules/themes/_components.scss
@@ -20,6 +20,10 @@
         background-color: $color;
     }
 
+    %background-#{$name} {
+        background-color: $color;
+    }
+
     %color-#{$name} {
         &, p, li, span { color: $color; }
     }
