--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -56,7 +56,7 @@
     @include valign-all(middle);
 }
 
-.gg-list {
+.gg-list-item {
     height: 3.5rem;
     @include column-layout((3.5rem, fill, 3rem), $display: table);
     @include valign-all(middle);
