--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -30,7 +30,7 @@ $type-script-font-family: "Brush Script MT", cursive !default;
 // Headings
 $type-heading-style: default !default;
 $type-heading-theme: default !default;
-$type-headings: ((h1, 6), (h2, 5), (h3, 4), (h4, 3), (h3, 2), (h2, 1), (h1, 0));
+$type-headings: ((h1, 1), (h2, 2), (h3, 3), (h4, 4), (h5, 5), (h6, 6));
 $type-heading-font-family: $type-primary-font-family !default;
 $type-heading-font-weight: $type-base-font-weight !default;
 $type-heading-font-style: normal !default;
