Adding lighting module

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -1,11 +1,6 @@
 <h1>Sandbox</h1>
-<h2>Sandbox</h2>
-<h3>Sandbox</h3>
-<h4>Sandbox</h4>
-<h5>Sandbox</h5>
-<h6>Sandbox</h6>
 
-<div class="gg-device border-light">
+<div class="gg-device border-light float-left">
     <header class="gg-header theme-primary">
         <div class="text-center"><i class="fa fa-bars"></i></div>
         <div class="pad-horizontal">
@@ -14,7 +9,7 @@
         <div class="text-center"><i class="fa fa-search"></i></div>
         <div class="text-center" ng-click="component.foo = !component.foo"><i class="fa fa-ellipsis-v"></i></div>
     </header>
-    <div class="row">
+    <div>
         <section class="layer">
             <div class="gg-list-item">
                 <div class="text-center"><i class="fa fa-star"></i></div>
@@ -73,4 +68,33 @@
         </section>
     </div>
     <div class="bg-dark"></div>
+</div>
+
+<div class="gg-device border-light float-left">
+    <header class="gg-header theme-primary">test</header>
+    <div>
+        <div class="card">
+            <div style="height: 100px" class="theme-primary">
+                <div class="row-bottom pad">
+                    <h4>Top 10 Australian Beaches</h4>
+                </div>
+            </div>
+            <div class="pad">
+                <h6>Number 10</h6>
+                <p>Whitehaven Beach <br>Whitsunday Island, Whitsunday Islands</p>
+            </div>
+        </div>
+        <div class="card" style="height: 100px">
+            <div class="col-2 bg-secondary">
+                
+            </div>
+            <div class="col-10 pad">
+                <hgroup>
+                    <h3>El Pooch</h3>
+                    <h5>By Alex Nielson</h5>
+                </hgroup>
+                <button class="primary inline">Free Sample</button><button class="light">Review</button>
+            </div>
+        </div>
+    </div>
 </div>
