--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -20,6 +20,7 @@
     'modules/_reset',
     'modules/_layout',
     'modules/shapes/_module',
+    'modules/lighting/_module',
     'modules/media/_module',
     'modules/grid/_module',
     'modules/icons/_module',
